styles complete, trying to fix alignment issue with section 1,2

--- a/style.css
+++ b/style.css
@@ -3,3 +3,171 @@
 body {
   font-family: 'Poppins';
 }
+header > div {
+    padding: 0 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+  }
+  
+  nav {
+    width: 600px;
+  }
+  
+  nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: black;
+  }
+  
+  .black-heart {
+    width: 20px;
+    margin-right: 1rem;
+  }
+  .section-background {
+    margin: 0px 50px 0px 50px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+}
+#head-bottom{
+    display:flex;
+    justify-content: space-between;
+    margin: 0px 45px 0px 45px;
+  }
+  #head-bottom *{
+      display: flex;
+      align-items: center;
+      height: 30px;
+  }
+  
+.npm-logo{
+      width: 35px;
+      margin: 1rem;
+  }
+  
+.magni-glass{
+      background-color: rgb(236, 232, 232);
+      border: 1px solid rgb(234, 232, 232);
+  }
+  
+.search-bar{
+      width: 1100px;
+      background-color: rgb(224, 220, 220);
+      border: none;
+  }
+  
+.search-btn{
+      background-color: rgb(241, 39, 39);
+      color: rgb(211, 205, 205);
+      height: 15px;
+      text-decoration: none;
+      font-size: 10px;
+      padding: 1px 10px 1px 10px;
+  }
+   .join-btn{
+      border: solid;
+      height: 15px;
+      text-decoration: none;
+      font-size: 10px;
+      padding: 1px 10px 1px 10px;
+  
+  }
+  .login-btn {
+      height: 15px;
+      text-decoration: none;
+      font-size: 10px;
+      padding: 1px 10px 1px 10px;
+  
+  }
+  #section1 {
+    background-color: rgba(232, 217, 217,.3);
+    border-top: 5px solid rgba(232, 217, 217,.3);
+}
+
+#section1 h2{
+    font-size: 100px;
+    padding: 100px 0px 100px 0px;
+}
+
+#section1 article{
+    text-align: center;
+    font-size: 20px;
+    width: 430px;
+    margin-bottom: 100px;
+}
+
+#section1 a{
+    text-decoration: none;
+    font-size: 20px;
+    text-align: center;
+    padding: 10px 60px 10px 60px;
+    border: none;
+}
+
+.see-plans-btn{
+    background-color: #FB3B49;
+    color:rgb(255, 255, 255);
+    margin-right: 10px;
+    box-shadow:  8px 8px 0 rgba(251, 59, 73, .2);
+}
+
+.join-forfree-btn{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    margin-left: 10px;
+}
+#section2 h3{
+    background-color:rgba(255, 204, 53, .4);
+    transform: skew(9deg, 0deg);
+    font-style: italic;
+    padding: 0px 20px 0px 20px;
+}
+#section2 .triangle-hexagon{
+    width: 200px;
+    padding: 100px 0px 100px 0px;
+}
+
+#section2 h3{
+    font-size: 45px;
+    margin-bottom: 50px;
+}
+
+#section2 article {
+    text-align: center;
+    font-size: 14px;
+    width: 570px;
+    margin-bottom: 100px;
+}
+  #section3 img{
+      width: 40px;
+      margin-bottom: 10px;
+  }
+   #section3 .container {
+      display: flex;
+      justify-content: space-around;
+      margin: 100px 100px 100px 100px;
+  }
+  #section3 a{
+      background-color: rgb(0, 0, 0);
+      color:rgb(255, 255, 255);
+      text-decoration: none;
+      padding: 20px 150px 20px 150px;
+      box-shadow: 8px 8px 0 rgba(128, 83, 35, .2);
+  }
+  #section3 article {
+      margin-right: 90px;
+  }
+  
+  #section3 article h4 {
+      margin-bottom: 50px;
+      color: #ed1c24;
+  }
